k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-homework-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: docker-homework-app
  template:
    metadata:
      labels:
        app: docker-homework-app
    spec:
      containers:
        - name: docker-homework-app
          image: idoping/docker-homework-app:latest
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health/
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health/
              port: 8000
            initialDelaySeconds: 2
            periodSeconds: 5
