k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthservice
spec:
  selector:
    app: healthservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
