k8s/ingress-otus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-otus
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/ilukin(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: healthservice
                port:
                  number: 80
